--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "slides-spontaneus-vertigo-and-dizziness",
   "type": "module",
+
   "private": true,
   "scripts": {
     "build": "slidev build",
@@ -12,6 +13,7 @@
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "^0.25.0",
     "slidev-theme-academic": "^2.1.0",
+    "slidev-theme-neversink": "^0.3.6",
     "vue": "^3.5.13"
   }
 }
